Improve match failure to include type / multiplicity