@@ -72,10 +72,7 @@ public class Match extends NativeFunction
             }
         }
 
-        String typePrinted = GenericType.print(valueType, true, processorSupport);
-        String multiplicityPrinted = Multiplicity.print(Instance.getValueForMetaPropertyToOneResolved(params.get(0), M3Properties.multiplicity, processorSupport));
-
-        throw new PureExecutionException(functionExpressionCallStack.peek().getSourceInformation(), "Match failure: " + typePrinted + multiplicityPrinted, functionExpressionCallStack);
+        throw new PureExecutionException(functionExpressionCallStack.peek().getSourceInformation(), "Match failure: " + (valueCount == 1 ? values.getFirst() : values.makeString("[", ", ", "]")), functionExpressionCallStack);
     }
 }
 
